--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,12 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
+    <fragment
+        android:id="@+id/mainFirstFragment"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        class="com.tjoeun.a20191112_01_fragment.fragments.FirstFragment"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="150dp"
