--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -6,6 +6,7 @@
     android:gravity="center">
 
     <TextView
+        android:id="@+id/firstFragmentTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="30sp"
