두번째 프래그먼트 연습문제

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,8 @@
         android:layout_height="150dp"
         class="com.tjoeun.a20191112_01_fragment.fragments.FirstFragment"/>
 
+    <!-- 배경 검정, 글씨 흰색인 secondFragment-->
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="150dp"
@@ -28,6 +30,12 @@
             android:text="첫번째 분할영역"/>
 
     </LinearLayout>
+
+    <fragment
+        android:id="@+id/mainSecondFragment"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        class="com.tjoeun.a20191112_01_fragment.fragments.SecondFragment"/>
 
     <LinearLayout
         android:layout_width="match_parent"
