프래그먼트 호라이존탈 구현

--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -7,9 +7,15 @@
     android:orientation="vertical"
     tools:context=".TestActivity">
 
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/testViewPager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
     <HorizontalScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:visibility="visible">
 
         <LinearLayout
             android:layout_width="wrap_content"
